--- a/morzyn.desktop
+++ b/morzyn.desktop
@@ -3,9 +3,10 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Terminal=false
-Name=morzyn
+Name=Morzyn
 Exec=/opt/morzyn/bin/morzyn
-Icon=morzyn64
-X-Window-Icon=
+Icon=/usr/share/morzyn/morzyn90.png
+X-Nemo-Application-Type=silica-qt5
+X-Window-Icon=morzyn64
 X-HildonDesk-ShowInToolbar=true
 X-Osso-Type=application/x-executable
