--- a/harbour-morzyn.desktop
+++ b/harbour-morzyn.desktop
@@ -3,5 +3,5 @@ Encoding=UTF-8
 Type=Application
 X-Nemo-Application-Type=silica-qt5
 Name=Morzyn
-Icon=/usr/share/icons/hicolor/90x90/apps/morzyn.png
-Exec=morzyn
+Icon=harbour-morzyn.png
+Exec=harbour-morzyn
