--- a/rpm/harbour-morzyn.yaml
+++ b/rpm/harbour-morzyn.yaml
@@ -1,13 +1,14 @@
-Name: morzyn
+Name: harbour-morzyn
 Summary: Morzyn - A Tribute to Morkin 2
 Version: 0.7.14
-Release: 3
+Release: 4
 Group: Qt/Qt
 License: LICENSE
 Sources:
 - '%{name}-%{version}.tar.bz2'
-Description: |
-  Short description of my SailfishOS Application
+Description: |-
+  You are a mighty magician.
+  It's your mission to defeat all enemies on the field with the help of a variety of creatures.
 Configure: none
 Builder: qtc5
 PkgConfigBR:
@@ -20,8 +21,8 @@ PkgConfigBR:
 Requires:
 - sailfishsilica-qt5
 Files:
-- '%{_datadir}/icons/hicolor/90x90/apps'
+- '%{_datadir}/icons/hicolor/86x86/apps'
 - '%{_bindir}'
-- '%{_datadir}/morzyn'
+- '%{_datadir}/harbour-morzyn'
 - '%{_datadir}/applications'
 PkgBR: []
