--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,37 +1,37 @@
 <?xml version='1.0' encoding='utf-8'?>
-<manifest package="de.yoktobit.morzyn" xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="2" android:versionName="0.7.13">
-    <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:configChanges="orientation|locale|fontScale|keyboard|keyboardHidden" android:screenOrientation="sensorLandscape" android:name="org.qtproject.qt5.android.bindings.QtActivity" android:label="@string/app_name">
+<manifest android:versionCode="3" package="de.yoktobit.morzyn" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.7.15">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="org.qtproject.qt5.android.bindings.QtApplication">
+        <activity android:label="@string/app_name" android:screenOrientation="sensorLandscape" android:configChanges="orientation|locale|fontScale|keyboard|keyboardHidden" android:name="org.qtproject.qt5.android.bindings.QtActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-            <meta-data android:name="android.app.qt_sources_resource_id" android:resource="@array/qt_sources"/>
-            <meta-data android:name="android.app.repository" android:value="@string/repository"/>
-            <meta-data android:name="android.app.qt_libs_resource_id" android:resource="@array/qt_libs"/>
-            <meta-data android:name="android.app.bundled_libs_resource_id" android:resource="@array/bundled_libs"/>
-            <meta-data android:name="android.app.lib_name" android:value="morzyn"/>
+            <meta-data android:resource="@array/qt_sources" android:name="android.app.qt_sources_resource_id"/>
+            <meta-data android:value="@string/repository" android:name="android.app.repository"/>
+            <meta-data android:resource="@array/qt_libs" android:name="android.app.qt_libs_resource_id"/>
+            <meta-data android:resource="@array/bundled_libs" android:name="android.app.bundled_libs_resource_id"/>
+            <meta-data android:value="morzyn" android:name="android.app.lib_name"/>
             <!-- Deploy Qt libs as part of package -->
-            <meta-data android:name="android.app.bundle_local_qt_libs" android:value="1"/>
-            <meta-data android:name="android.app.bundled_in_lib_resource_id" android:resource="@array/bundled_in_lib"/>
-            <meta-data android:name="android.app.bundled_in_assets_resource_id" android:resource="@array/bundled_in_assets"/>
+            <meta-data android:value="1" android:name="android.app.bundle_local_qt_libs"/>
+            <meta-data android:resource="@array/bundled_in_lib" android:name="android.app.bundled_in_lib_resource_id"/>
+            <meta-data android:resource="@array/bundled_in_assets" android:name="android.app.bundled_in_assets_resource_id"/>
             <!-- Run with local libs -->
-            <meta-data android:name="android.app.use_local_qt_libs" android:value="1"/>
-            <meta-data android:name="android.app.libs_prefix" android:value="/data/local/tmp/qt/"/>
-            <meta-data android:name="android.app.load_local_libs" android:value="libs/libgnustl_shared.so:plugins/mediaservice/libandroidmediaplayer.so:lib/libQt5MultimediaQuick_p.so:plugins/platforms/android/libqtforandroidGL.so:lib/libQt5QuickParticles.so:"/>
-            <meta-data android:name="android.app.load_local_jars" android:value="jar/QtAndroid-bundled.jar:jar/QtMultimedia-bundled.jar:"/>
-            <meta-data android:name="android.app.static_init_classes" android:value=":"/>
+            <meta-data android:value="1" android:name="android.app.use_local_qt_libs"/>
+            <meta-data android:value="/data/local/tmp/qt/" android:name="android.app.libs_prefix"/>
+            <meta-data android:value="libs/libgnustl_shared.so:plugins/mediaservice/libandroidmediaplayer.so:lib/libQt5MultimediaQuick_p.so:plugins/platforms/android/libqtforandroidGL.so:lib/libQt5QuickParticles.so:" android:name="android.app.load_local_libs"/>
+            <meta-data android:value="jar/QtAndroid-bundled.jar:jar/QtMultimedia-bundled.jar:" android:name="android.app.load_local_jars"/>
+            <meta-data android:value=":" android:name="android.app.static_init_classes"/>
             <!--  Messages maps -->
-            <meta-data android:name="android.app.ministro_not_found_msg" android:value="@string/ministro_not_found_msg"/>
-            <meta-data android:name="android.app.ministro_needed_msg" android:value="@string/ministro_needed_msg"/>
-            <meta-data android:name="android.app.fatal_error_msg" android:value="@string/fatal_error_msg"/>
+            <meta-data android:value="@string/ministro_not_found_msg" android:name="android.app.ministro_not_found_msg"/>
+            <meta-data android:value="@string/ministro_needed_msg" android:name="android.app.ministro_needed_msg"/>
+            <meta-data android:value="@string/fatal_error_msg" android:name="android.app.fatal_error_msg"/>
             <!--  Messages maps -->
             <!-- Splash screen -->
-            <meta-data android:name="android.app.splash_screen" android:resource="@layout/splash"/>
+            <meta-data android:resource="@layout/splash" android:name="android.app.splash_screen"/>
             <!-- Splash screen -->
         </activity>
     </application>
-    <supports-screens android:normalScreens="true" android:smallScreens="false" android:xlargeScreens="true" android:largeScreens="true" android:anyDensity="true"/>
+    <supports-screens android:normalScreens="true" android:smallScreens="false" android:largeScreens="true" android:xlargeScreens="true" android:anyDensity="true"/>
     <!--<compatible-screens>
         large screens
         <screen android:screenSize="large" android:screenDensity="hdpi"/>
