--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,52 +1,40 @@
 <?xml version='1.0' encoding='utf-8'?>
-<manifest android:versionCode="3" package="de.yoktobit.morzyn" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.7.15">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="org.qtproject.qt5.android.bindings.QtApplication">
-        <activity android:label="@string/app_name" android:screenOrientation="sensorLandscape" android:configChanges="orientation|locale|fontScale|keyboard|keyboardHidden" android:name="org.qtproject.qt5.android.bindings.QtActivity">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" android:versionCode="5" package="de.yoktobit.morzyn.morzyn_desktopandroid" android:versionName="0.7.14">
+    <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="Morzyn" android:icon="@drawable/icon">
+        <activity android:screenOrientation="unspecified" android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|locale|fontScale|keyboard|keyboardHidden|navigation" android:name="org.qtproject.qt5.android.bindings.QtActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-            <meta-data android:resource="@array/qt_sources" android:name="android.app.qt_sources_resource_id"/>
-            <meta-data android:value="@string/repository" android:name="android.app.repository"/>
-            <meta-data android:resource="@array/qt_libs" android:name="android.app.qt_libs_resource_id"/>
-            <meta-data android:resource="@array/bundled_libs" android:name="android.app.bundled_libs_resource_id"/>
             <meta-data android:value="morzyn" android:name="android.app.lib_name"/>
+            <meta-data android:name="android.app.qt_sources_resource_id" android:resource="@array/qt_sources"/>
+            <meta-data android:value="default" android:name="android.app.repository"/>
+            <meta-data android:name="android.app.qt_libs_resource_id" android:resource="@array/qt_libs"/>
+            <meta-data android:name="android.app.bundled_libs_resource_id" android:resource="@array/bundled_libs"/>
             <!-- Deploy Qt libs as part of package -->
-            <meta-data android:value="1" android:name="android.app.bundle_local_qt_libs"/>
-            <meta-data android:resource="@array/bundled_in_lib" android:name="android.app.bundled_in_lib_resource_id"/>
-            <meta-data android:resource="@array/bundled_in_assets" android:name="android.app.bundled_in_assets_resource_id"/>
+            <meta-data android:value="-- %%BUNDLE_LOCAL_QT_LIBS%% --" android:name="android.app.bundle_local_qt_libs"/>
+            <meta-data android:name="android.app.bundled_in_lib_resource_id" android:resource="@array/bundled_in_lib"/>
+            <meta-data android:name="android.app.bundled_in_assets_resource_id" android:resource="@array/bundled_in_assets"/>
             <!-- Run with local libs -->
-            <meta-data android:value="1" android:name="android.app.use_local_qt_libs"/>
+            <meta-data android:value="-- %%USE_LOCAL_QT_LIBS%% --" android:name="android.app.use_local_qt_libs"/>
             <meta-data android:value="/data/local/tmp/qt/" android:name="android.app.libs_prefix"/>
-            <meta-data android:value="libs/libgnustl_shared.so:plugins/mediaservice/libandroidmediaplayer.so:lib/libQt5MultimediaQuick_p.so:plugins/platforms/android/libqtforandroidGL.so:lib/libQt5QuickParticles.so:" android:name="android.app.load_local_libs"/>
-            <meta-data android:value="jar/QtAndroid-bundled.jar:jar/QtMultimedia-bundled.jar:" android:name="android.app.load_local_jars"/>
-            <meta-data android:value=":" android:name="android.app.static_init_classes"/>
+            <meta-data android:value="-- %%INSERT_LOCAL_LIBS%% --" android:name="android.app.load_local_libs"/>
+            <meta-data android:value="-- %%INSERT_LOCAL_JARS%% --" android:name="android.app.load_local_jars"/>
+            <meta-data android:value="-- %%INSERT_INIT_CLASSES%% --" android:name="android.app.static_init_classes"/>
             <!--  Messages maps -->
             <meta-data android:value="@string/ministro_not_found_msg" android:name="android.app.ministro_not_found_msg"/>
             <meta-data android:value="@string/ministro_needed_msg" android:name="android.app.ministro_needed_msg"/>
             <meta-data android:value="@string/fatal_error_msg" android:name="android.app.fatal_error_msg"/>
             <!--  Messages maps -->
             <!-- Splash screen -->
-            <meta-data android:resource="@layout/splash" android:name="android.app.splash_screen"/>
+            <meta-data android:name="android.app.splash_screen" android:resource="@layout/splash"/>
             <!-- Splash screen -->
         </activity>
     </application>
-    <supports-screens android:normalScreens="true" android:smallScreens="false" android:largeScreens="true" android:xlargeScreens="true" android:anyDensity="true"/>
-    <!--<compatible-screens>
-        large screens
-        <screen android:screenSize="large" android:screenDensity="hdpi"/>
-        <screen android:screenSize="large" android:screenDensity="xhdpi"/>
-        <screen android:screenSize="large" android:screenDensity="xxhdpi"/>
-        <screen android:screenSize="large" android:screenDensity="ldpi"/>
-        <screen android:screenSize="large" android:screenDensity="mdpi"/>
-        <screen android:screenSize="large" android:screenDensity="tvdpi"/>
-        <screen android:screenSize="xlarge" android:screenDensity="hdpi"/>
-        <screen android:screenSize="xlarge" android:screenDensity="xhdpi"/>
-        <screen android:screenSize="xlarge" android:screenDensity="xxhdpi"/>
-        <screen android:screenSize="xlarge" android:screenDensity="ldpi"/>
-        <screen android:screenSize="xlarge" android:screenDensity="mdpi"/>
-        <screen android:screenSize="xlarge" android:screenDensity="tvdpi"/>
-    </compatible-screens>-->
+    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="14"/>
+    <supports-screens android:normalScreens="true" android:largeScreens="true" android:anyDensity="true" android:smallScreens="true"/>
+    <!-- %%INSERT_PERMISSIONS -->
+    <!-- %%INSERT_FEATURES -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 </manifest>
