--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,7 +1,7 @@
-<?xml version='1.0' encoding='utf-8'?>
-<manifest android:versionCode="11" package="de.yoktobit.morzyn" xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" android:versionName="0.7.15">
-    <application android:label="Morzyn" android:name="org.qtproject.qt5.android.bindings.QtApplication" android:icon="@drawable/icon">
-        <activity android:screenOrientation="sensorLandscape" android:label="@string/app_name" android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|locale|fontScale|keyboard|keyboardHidden|navigation" android:name="org.qtproject.qt5.android.bindings.QtActivity">
+<?xml version="1.0"?>
+<manifest android:versionCode="12" package="de.yoktobit.morzyn" xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" android:versionName="0.7.16">
+    <application android:label="Morzyn" android:name="org.qtproject.qt5.android.bindings.QtApplication" android:icon="@drawable/icon" android:theme="@android:style/Theme.Holo.NoActionBar.TranslucentDecor">
+        <activity android:screenOrientation="sensorLandscape" android:label="@string/app_name" android:launchMode="singleTop" android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|locale|fontScale|keyboard|keyboardHidden|navigation" android:name="org.qtproject.qt5.android.bindings.QtActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -31,10 +31,10 @@
             <!-- Splash screen -->
         </activity>
     </application>
-    <uses-sdk android:targetSdkVersion="14" android:minSdkVersion="9"/>
+    <uses-sdk android:targetSdkVersion="19" android:minSdkVersion="9"/>
     <supports-screens android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:anyDensity="true"/>
-    <!-- %%INSERT_PERMISSIONS -->
-    <!-- %%INSERT_FEATURES -->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+
+
+
 </manifest>
