scaling on Jolla Tablet

--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,5 @@ morzyn
 *pre1
 harbour-morzyn.pro.user.da85556
 morzyn.pro.user.18
+harbour-morzyn.pro.user.ae3693c
+harbour-morzyn.pro.user.2955e72
