--- a/.gitignore
+++ b/.gitignore
@@ -225,3 +225,4 @@ harbour-morzyn.pro.user.da85556
 morzyn.pro.user.18
 harbour-morzyn.pro.user.ae3693c
 harbour-morzyn.pro.user.2955e72
+morzyn.pro.user.f37add6
